# max_back

./: .dockerignore  .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
events/: admin.py  fields.py  models.py  serializers.py  urls.py  views.py
events/migrations/: 0001_initial.py  0002_user.py  0003_alter_dayprogram_schedule_file_and_more.py  0004_user_is_manager.py  0005_alter_city_options_city_order.py  0006_remove_program_speakers_file_and_more.py  0007_remove_dayprogram_schedule_file_and_more.py
max_back/: asgi.py  settings.py  urls.py  wsgi.py
