[tool.poetry]
name = "max-back"
version = "0.1.0"
description = ""
authors = ["benomen <arvolodko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0.6"
djangorestframework = "^3.17.1"
drf-spectacular = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
